<resources>

    <string name="app_name">Диспетчер маршрутов</string>

    <!-- НАСТРОЙКИ ПРИЛОЖЕНИЯ -->

    <!-- ПОИСК -->
    <string name="pref.name.stationtime">stationTime</string>
    <string name="pref.value.stationtime">30</string>

    <string name="pref.name.clearcash">clearCash</string>

    <!-- СОХРАНЕННЫЕ МАРШРУТЫ -->
    <string name="pref_name_period">period</string>
    <string name="pref_value_period">60</string>

    <string name="pref.name.clearevent">clearEvent</string>

    <string name="tooltip_main_content_statusbar">Потяните вверх, чтобы выбрать промежуточные станции</string>
    <string name="tooltip_main_bottom_sheet_on_fabAdd">Добавление промежуточной станции</string>
    <string name="tooltip_main_content_bstation">Выбор станции отправления</string>
    <string name="tooltip_main_content_estation">Выбор станции прибытия</string>
    <string name="tooltip_main_content_bcalendar">Выбор необходимой даты</string>
    <string name="tooltip_main_content_search">Начала поиска маршрута</string>
    <string name="tooltip_station_search">Нажмите для поиска станции</string>
    <string name="tooltip_station_item_favourite">Добавление станции в избранное</string>
    <string name="main_bottom_sheet_on_item_time">Нажмите, для изменения минимального времени нахождения на станции</string>
    <string name="help">Помощь</string>
    <string name="sort_departure_time">Время отправления </string>
    <string name="sort_arrival_time">Время прибытия </string>
    <string name="sort_total_time">Общее время </string>
    <string name="sort_station_time">Время на станциях </string>
    <string name="sort_travel_time">Время в пути </string>
    <string name="sort_title">Сортировка</string>
    <string name="search_title">Поиск маршрута</string>
    <string name="b_station_placeholder">Станция отправления</string>
    <string name="e_station_placeholder">Станция прибытия</string>
    <string name="route_title">Маршрут</string>
    <string name="connection_msg_not_found">Нет интернет соединения</string>
    <string name="schedule_msg_save_success">Расписание сохранено</string>
    <string name="schedule_msg_save_error">Ошибка сохранения расписания</string>
    <string name="schedule_msg_search_error">Ошибка поиска расписания</string>
    <string name="schedule_repeat_search">Повторить</string>
    <string name="not_found_title">Ошибка поиска</string>
    <string name="schedule_msg_loading">Загрузка...</string>
    <string name="tooltip_main_content_seekbar">Ограничение времени отправления и прибытия</string>
    <string name="menu_item_clear_cash">Очистка кэша</string>
    <string name="menu_item_clear_data">Удаление маршрутов</string>
    <string name="task_clear_cash_completed">Очистка кэша завершена</string>
    <string name="task_clear_data_completed">Очистка маршрутов завершена</string>
    <string name="context_menu_save">Сохранить</string>
    <string name="context_menu_share">Поделиться</string>
    <string name="share">Поделиться</string>
    <string name="context_menu_search_map">Найти на карте</string>
    <string name="place_map_msg_not_found">Нет информации для данной станции</string>
    <string name="context_menu_search_image">Поиск фотографий станции</string>
    <string name="image_msg_not_found">Нет изображений для данной станции</string>
    <string name="drawer_item_image">Галерея</string>

</resources>
